conectamos node con postgres

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "faker": "^5.5.3",
-    "joi": "^17.6.3"
+    "joi": "^17.6.3",
+    "pg": "^8.8.0"
   },
   "engines": {
     "node": "18.x"
