--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "express": "^4.18.1",
     "faker": "^5.5.3",
     "joi": "^17.6.3",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.25.3"
   },
   "engines": {
     "node": "18.x"
