--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "sequelize-cli": "^6.5.2"
   },
   "dependencies": {
     "@hapi/boom": "^10.0.0",
