--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=3000
 DATABASE_URL=postgres://user:password@localhost:5432/database_name
+API_KEY=apitoken
 DB_USER=''
 DB_PASSWORD=''
 DB_HOST=''
