recovery mail sent

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
 PORT=3000
 DATABASE_URL=postgres://user:password@localhost:5432/database_name
 API_KEY=apitoken
-DB_USER=''
-DB_PASSWORD=''
-DB_HOST=''
-DB_NAME=''
-DB_PORT=''
-JWT_SECRET=''
+JWT_SECRET='jwtSecret'
+SMPT_EMAIL='email'
+SMPT_PASSWORD='password'
